# python-sdk

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  Taskfile.yml  openapi.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  launch.json
.flox/: env.json
.flox/env/: manifest.toml
.githooks/: pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  claude.yml  infer.yml  release.yml  schemas-sync.yml
.infer/: config.yaml  keybindings.yaml  prompts.yaml
.infer/shortcuts/: git.yaml
examples/: README.md
examples/chat/: README.md  __init__.py  main.py
examples/list/: README.md  __init__.py  main.py
examples/mcp/: README.md  main.py
examples/messages/: README.md  main.py
examples/tools/: README.md  __init__.py  main.py
inference_gateway/: __init__.py  client.py  models.py
templates/: header.jinja2
templates/pydantic/: BaseModel.jinja2
tests/: test_client.py  test_version.py
