[project]
name = "inference-gateway"
version = "0.10.0"
authors = [{ name = "Eden Reich", email = "eden.reich@gmail.com" }]
description = "A Python SDK for Inference Gateway"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.33.1",
    "pydantic>=2.13.4",
    "httpx>=0.28.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-watch>=4.2.0",
    "black>=26.3.1",
    "isort>=8.0.1",
    "mypy>=1.20.2",
    "datamodel-code-generator>=0.56.1",
    "types-requests>=2.33.0.20260503",
]

[project.urls]
Homepage = "https://github.com/inference-gateway/python-sdk"
Issues = "https://github.com/inference-gateway/python-sdk/issues"
Documentation = "https://inference-gateway.github.io/docs/"
Repository = "https://github.com/inference-gateway/python-sdk"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["inference_gateway*"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-config --strict-markers"

[tool.coverage.run]
source = ["inference_gateway"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
